curso-k8s-udemy/ingress/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-depl
  labels: 
    app: front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        command: ["sh", "-c", "echo VERSION 1.0 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
