curso-k8s-udemy/ingress/02-ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /appv1
        pathType: Prefix
        backend:
          service:
            name: ingress-depl
            port:
               number: 8080
